lang/macro/tests/ui/fail/01-constructor-returns.stderr
error: constructor of liquid contract should not have return value
  --> $DIR/01-constructor-returns.rs:10:38
   |
10 |         fn invalid_return(&mut self) -> Self {}
   |                                      ^^^^^^^
